--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 	padding: 0px;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	font-size: 18px;
 	font-family: tahoma;
@@ -10,18 +14,27 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background-image: url('../img/Lighthouse.jpg')
+	background-size: cover; 
+	background-color: #000000; 
+	background-repeat: no-repeat; 
+	background-position: center center;
+	background-image: url('../img/Lighthouse.jpg');
 }
 
 .header {
 	width: 450px;
 	margin: 50px auto 0px;
-	color: rgb(255, 255, 255);
 	text-align: left;
 	border: 1px solid #B0C4DE;
 	background: rgba(0, 0, 0, 0.432);
 	border-radius: 10px 10px 0px 0px;
 	padding: 20px;
+	color: rgb(165, 165, 165);
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 form,
